# CircuitSetu

./: .gitignore  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
engine/: CMakeLists.txt
engine/src/: solver.cpp  wasm_bindings.cpp
frontend/: package-lock.json  package.json
frontend/public/: circuit_engine.wasm
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/simulator/: page.js
frontend/src/components/: CircuitCanvas.js  PropertiesPanel.js  Sidebar.js  SimulationPanel.js  Workspace.js  logo.js  useWasmEngine.js
frontend/src/lib/: circuit_engine.js  netlistGenerator.js
frontend/src/store/: circuitStore.js
